--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
      .body{
         display: grid;
         place-items: center;
-        background-image: url("https://i.pinimg.com/564x/9f/fe/23/9ffe23baf2587837514ecd95e698a5f1.jpg");
+        background-image: url("image.png");
         background-repeat: no-repeat;
         
     }
